<resources>
    <string name="app_name">YoungTalents</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="username">Benutzername</string>

    <string name="password">Passwort</string>

    <string name="email">Email-Adresse</string>

    <string name="login">Einloggen</string>

    <string name="title_activity_login">LoginActivity</string>

    <string name="registration_instruction">Du bist noch nicht registriert? Dann klicke unten, um dich zu registrieren.</string>

    <string name="registration_success">Du bist nun erfolgreich registriert.</string>

    <string name="logout_success">Du bist nun ausgeloggt.</string>

    <string name="login_again">Klicke hier, um zu Dich wieder einzuloggen.</string>

    <string name="follow_button">Klicke hier, um zu Deinem Menü zu gelangen.</string>

    <string name="mainmenu">Willkommen in Deinem Hauptmenü!</string>

    <string name="register_button">Registrieren</string>

    <string name="title_activity_register">RegisterActivity</string>

    <string name="welcome">Willkommen</string>

    <string name="is_login">Du bist nun eingeloggt</string>

    <string name="sign_up">Registriere Dich jetzt</string>

</resources>

