<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#08253c"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/username"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/username_field_r"
        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/username"
        android:background="#ffffff"
        android:layout_alignStart="@+id/username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/password"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_below="@+id/username_field_r"
        android:layout_alignLeft="@+id/username_field_r"
        android:layout_alignStart="@+id/username_field_r"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_field_r"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:background="#ffffff"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <CheckBox
        android:id="@+id/keepmeloggedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Eingeloggt bleiben"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/password_field_r"
        android:layout_alignLeft="@+id/password_field_r"
        android:layout_alignStart="@+id/password_field_r" />

    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="#FF0000"
        android:id="@+id/loginfail"
        android:layout_below="@+id/keepmeloggedin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/loginfail"
        android:layout_centerHorizontal="true" />

    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_instruction"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:id="@+id/textView"
        android:layout_below="@+id/login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:id="@+id/register_button"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>